# CppExercises2017

./: .gitignore  README.md
Ex1/: layout.txt
Ex1/Ex1/: Ex1.sln
Ex1/Ex1/Ex1/: Board.cpp  Board.h  BoardErrors.cpp  BoardErrors.h  Ex1.cpp  Ex1.vcxproj  Ex1.vcxproj.filters  Piece.cpp  Piece.h  PieceEQClasses.cpp  Solution.cpp  Solution.h  makefile  test2.in  test2.out
Ex1/InputTests/: inputGood32Puzzle.txt  inputGood64Puzzle.txt  inputzz.txt  testSingleColumnSolution.txt
Ex2/: .gitignore  CMakeLists.txt  Ex2.sln
Ex2/Ex2/: Board.cpp  Board.h  BoardErrors.cpp  BoardErrors.h  Ex2.vcxproj  Ex2.vcxproj.filters  Main.cpp  Piece.cpp  Piece.h  PieceEQClasses.h  PieceRotationContainer.cpp  PieceRotationContainer.h  RotatableSolution.cpp  RotatableSolution.h  RotationContainer.cpp  RotationContainer.h  Solution.cpp  Solution.h  SolutionFoundChecker.h  ex2.cpp  ex3.cpp  input.in  makefile  readme.txt  students.txt
Ex4/: CMakeLists.txt  Piece.h  Puzzle2dPiece.cpp  Puzzle2dPiece.h  Puzzle3dPiece.cpp  Puzzle3dPiece.h  TypesMap.cpp  TypesMap.h  ex4headers.h  main.cpp  makefile  students.txt
InputTests/: ReallyHard32puzzle.in  input2piecesWithout1Corner.in  input36withRotation-Fast.in  input45longTime.txt  input64FromMaayanCheck.txt  input64RotatableWithSolutionLongTime.txt  input64wrongNumOfStraightEdges.in  inputGood16Puzzle.txt  inputGood25.txt  output64RotatableWithSolutionLongTime.out  test2.in
